--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,8 @@ actix-web = "3"
 actix-rt = "*"
 serde = "*"
 serde_json = "*"
-diesel = { version = "1.4.4", features = ["postgres"] }
+diesel = { version = "*", features = ["postgres", "r2d2", "uuid", "chrono"] }
+lazy_static = "*"
+r2d2 = "*"
+diesel_migrations = "*"
+uuid = { version = "*", features = ["serde", "v4"] }
